[package]
name = "ip-alloc-lookup"
version = "0.1.2"
edition = "2024"
authors = ["Marko Markovic <marko.markovic0@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "Fast, offline IPv4/IPv6 IP allocation lookup (country + EU flag) using RIPE NCC delegated data"
repository = "https://github.com/markobekko/ip-alloc-lookup"
documentation = "https://docs.rs/ip-alloc-lookup"
readme = "README.md"
keywords = [
    "ip",
    "rir",
    "ip-range",
    "lookup",
    "offline",
]

categories = [
    "network-programming",
    "data-structures",
]

[features]
default = []
download = ["dep:reqwest"]

[dependencies]
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
# Used by the tests for cache update (temp dirs/files)
tempfile = "3"

[[bench]]
name = "lookups"
harness = false